# Process-Based-Rewards-for-Code-Optimization

./: .gitignore  README.md  main.py  requirements.txt
SimdBench-1B3F/: .gitignore  README.md  clean_unicode_tsvc.py  create_tsvc_scalar.py  example_samples-correctness.jsonl  pyproject.toml  qwen2.5-coder-1.5b-AVX-correctness.jsonl  requirements.txt  run.sh  setup_environment.sh  simdbench-avx-only.jsonl  test_compilation.py  tsvc_clean.jsonl  tsvc_clean_cleaned.jsonl  tsvc_scalar.jsonl  tsvc_scalar_cleaned.jsonl  tsvc_simdbench.jsonl  validate_tsvc_dataset.py
SimdBench-1B3F/data/: simdbench-scalar.jsonl  simdbench.jsonl
SimdBench-1B3F/example-simd-implementation/: vadd.cpp  vadd_avx.cpp  vadd_neon.cpp  vadd_rvv.cpp  vadd_sse.cpp  vadd_sve.cpp
SimdBench-1B3F/example-task/: README.md  example_problem.jsonl  example_samples.jsonl  signature.cpp  solution_scalar.cpp  test_correctness.cpp  test_performance.cpp
SimdBench-1B3F/raw-data/SimdBench_0/: info.json  signature.cpp  solution_scalar.cpp  test_correctness.cpp  test_performance.cpp
SimdBench-1B3F/raw-data/SimdBench_1/: info.json  signature.cpp  solution_scalar.cpp  test_correctness.cpp  test_performance.cpp
SimdBench-1B3F/raw-data/SimdBench_10/: info.json  signature.cpp  solution_scalar.cpp  (+2 more)
SimdBench-1B3F/scripts/: correctness_eval.py  performance_eval.py
SimdBench-1B3F/simdbench/: check_google_benchmark.py  check_tasks.py  data.py  evaluate_functional_correctness.py  evaluate_performance.py  evaluation.py  execution.py  global_var.py  qwen2.5-coder-1.5b-AVX.jsonl  request_llm.py  task.py  task_scalar.py
(+1107 files in other folders)
